--- a/app/src/main/res/layout/activity_simulation.xml
+++ b/app/src/main/res/layout/activity_simulation.xml
@@ -16,12 +16,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/start_simulation"
+            android:visibility="gone"
             />
         <Button
             android:id="@+id/btnAddCar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/add_car"
+            android:onClick="addCar"
             />
     </LinearLayout>
     <com.eightman.autov.Simulation.SimulationView
