--- a/app/src/main/res/layout/stats.xml
+++ b/app/src/main/res/layout/stats.xml
@@ -19,6 +19,19 @@
     <TableRow>
 
         <TextView
+            android:text="@string/time"
+            style="@style/stats"/>
+
+        <TextView
+            android:id="@+id/tvTime"
+            android:text="0"
+            style="@style/stats"/>
+    </TableRow>
+
+
+    <TableRow>
+
+        <TextView
             android:text="@string/efficiency"
             style="@style/stats"/>
 
