--- a/app/src/main/res/layout/activity_simulation.xml
+++ b/app/src/main/res/layout/activity_simulation.xml
@@ -34,6 +34,13 @@
             android:layout_height="wrap_content"
             android:text="@string/add_5_cars"
             />
+
+        <Button
+            android:id="@+id/btnRunSimulation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/simulate"
+            />
     </LinearLayout>
 
     <RelativeLayout
